...
class CreateRepertoire {
  const CreateRepertoire({
    required this.name,
    required this.color,
    this.pgnContent,
    this.gameCount = 0,
    this.chapterName = 'Main',
    this.splitChapters = true,
  });

  final String name;
  final String color;
  final String? pgnContent;
...
